--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'Poetry'
+- GITenberg
 title: Poems
 url: http://www.gutenberg.org/ebooks/38594
